--- a/style.css
+++ b/style.css
@@ -7,5 +7,5 @@ h1 {
   color: purple;
   font-size: 1rem;
   text-decoration: underline;
-  text-shadow: 2px 2px 4px pink
+  text-shadow: 2px 2px 4px pink;
 }
