--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 /* body {
   background-color: beige;
 } */
+.name{
+  color:purple;
+}
+
+.question{
+color:rgb(139, 0, 0)
+}
 h1 {
   color: purple;
   font-size: 1rem;
