--- a/test.css
+++ b/test.css
@@ -2,3 +2,10 @@ body {
   background-color:#222222;
   color: white;
 }
+#card-container {
+  width: 512px;
+  height: 256px;
+  background-color:#111111;
+
+  margin: 0 auto;
+}
