--- a/test.css
+++ b/test.css
@@ -8,4 +8,21 @@ body {
   background-color:#111111;
 
   margin: 0 auto;
+  padding: 12px;
+  text-align: center;
+  
+  border-style: solid;
+  border-width: 2px;
+  border-color: #555555;
+  border-radius: 5px;
+}
+#name{
+  margin-top: 64px;
+  
+  text-transform: uppercase;
+  font-family: Helvetica;
+  font-weight: 200;
+  
+  border-bottom: solid 1px white;
+  padding-bottom: 12px;
 }
