--- a/tstyle.css
+++ b/tstyle.css
@@ -1,20 +1,23 @@
-body {background-color: #012B0A
+body { 
+  background-color: #012B0A; /* added ; */
 }
 
-#corner-head{ border-style: solid; 
+#corner-head { 
+  border-style: solid; 
   border-color: #124D1F; 
-  color: FFFFFF; text-decoration underline;
+  color: #FFFFFF; 
+  text-decoration: underline; /* added : */
   position: relative;
   right: 0%;
   top: 5%;
   margin: 3% 0% 3% 70%;
   padding: 2% 5%;
   border-radius: 5px;
-  background-colour: #124D1F;
+  background-color: #124D1F;
 }
 
 #c-text {
-backround-color: #124D1F;
+background-color: #124D1F; /* fixed spelling */
  padding: 5%;
  margin: 0 auto;
   text-align: center;
@@ -24,17 +27,18 @@ border-radius: 8px;
 }
 
 #color {
-background-color: #8A4304;
-width: 200;
-height: 200;
+background-color: #8A4304; /* added # */
+width: 200px; /* added px */
+height: 200px;/* added px */
 border-radius: 50%;
-margin: 0 auto;}
+margin: 0% auto;
+}
 
-#text {
-background-color: 124D1F; pudding: 5%;
+#text { /* text written incorrectly */
+background-color: #124D1F; padding: 5%; /* changed spelling of padding and added # */
 margin: 5% auto;
-text-align: yes;
-color: blown;
+text-align: center;
+color: #FFFFFF;
 width: 500px;
-border-radius: 8pz;
+border-radius: 8px; /* changed spelling of px */
 }
