--- a/more.css
+++ b/more.css
@@ -5,17 +5,17 @@ color: #3b2b0a;
 } /* The body section of the CSS was missing a curly brace to close it. Without closing this section, it is able to ignore and mess up the rest of the sections in the CSS file */
 .sidebar { 
 position: fixed;
-top: yes;
-left: 0;
+top: 0px; /* This positioning element was missing a number and "px" beside it. When setting up the porportions of a CSS element, you must enter a number and not a word. An HTML needs to use to ensure that it looks the same on devices like tablet, phones, etc. Along with that, you need to add "px" at the end to signify pixels. Pixels is the only unit computers use to where to place the CSS element. */
+left: 0px; /* This positioning element was missing the "px" beside it. This is the correct unit the computer will use to position the CSS element correctly*/
 width: 220px;
 height: 100%;
 background-color: #d8b382;
-
 padding: 20px;
-box-shadow: 3px 0 8px rgba(0,0,0,0.2);
+box-shadow: 3px 0 8px rgb(0,0,0,0.2); /*The coloring in this CSS element is was written incorrectly. When writing an RGB element, it is important to write it correctly because the CSS is sensitive and will not understand which coloring you are using.*/
 }
+
 #sidebar h2 {
-color: what;
+color: FFFFFF; /*This element had "what" written inside of it instead of a hex code. Without writing a hex code correctly, the CSS will ignore it and not add the coloring you want.*/
 text-align: center;
 }
 #sidebar ul {
