--- a/more.css
+++ b/more.css
@@ -56,7 +56,7 @@ padding: 30px;
 margin-top: 25px;
 border-radius: 8px;
 }
-.wool-detail
+.wool-detail { /*This CSS element is missing it's starting curly brace. Without adding the starting curly brace, the CSS will read as invaild and ignore it entirely.*/
 position: absolute;
 bottom: 10px;
 right: 10px;
