--- a/images.css
+++ b/images.css
@@ -1,3 +1,4 @@
 body {
-  background-color: #8b0000;
+ /* background-color: #8b0000; */
+  background-image: url(https://images.pexels.com/photos/12715156/pexels-photo-12715156.jpeg?cs=srgb&dl=pexels-roman-odintsov-12715156.jpg&fm=jpg);
 }
