--- a/images.css
+++ b/images.css
@@ -1,4 +1,5 @@
 body {
  /* background-color: #8b0000; */
   background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTg11i7a72Um3lG94xW3PaB_udrp3gOBhu7Zw&s);
+ background-repeat: no-repeat; 
 }
