--- a/images.css
+++ b/images.css
@@ -5,3 +5,11 @@ body {
  background-size: cover;
  background-position: center;
 }
+
+.polaroid{
+ width: 50%;
+ margin: auto;
+ background-color: black;
+ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), ;
+ 
+}
