--- a/finalprojectpage1.css
+++ b/finalprojectpage1.css
@@ -1,14 +1,41 @@
-.logo {
-  position: fixed;
-}
-nav {
+.navigation {
   position: fixed;
   top: 0;
   right: 0;
   length: 100px;
-  
+  font-family:"Verdana";
+  font-color: #FFD700;
 }
 .aboutush1 {
   text-align: center;
   font-family:"Brush Script MT";
+}
+.aboutush3 {
+  font-family:"Verdana";
+  text-align: center;
+  font-color: #FFD700;
+  margin-left: 15%;
+  margin-right:15%;
+}
+.aboutush3part2 {
+  font-family:"Verdana";
+  text-align: center;
+  font-color: #FFD700;
+  margin-left: 15%;
+  margin-right:15%;
+}
+.aboutusimages {
+  position: z-index;
+  border-radius: 50px;
+  border-width: 10px;
+}
+.aboutusimagespart2 {
+  position: z-index;
+  border-radius: 50px;
+  border-width: 10px;
+}
+.aboutusimagespart3 {
+  position: z-index;
+  border-radius: 50px;
+  border-width: 10px;
 }
