--- a/finalprojectpage1.css
+++ b/finalprojectpage1.css
@@ -35,7 +35,7 @@
   border-width: 10px;
 }
 .aboutusimagespart2 {
-  position: aboslute;
+  position: absolute;
   z-index: 2;
   border-radius: 50px;
   border-width: 10px;
