--- a/finalprojectpage1.css
+++ b/finalprojectpage1.css
@@ -62,6 +62,11 @@
   margin-top: 500px;
 }
 
+.studioh1 {
+  font-family: "Brush Script MT";
+  font-size: 5.2rem;
+}
+
 .studioh3flex {
   margin-right: 700px;
 }
