--- a/finalprojectpage3.css
+++ b/finalprojectpage3.css
@@ -1,1 +1,49 @@
+.navigation {
+  position: fixed;
+  top: 0;
+  right: 0;
+  length: 100px;
+  font-family:"Verdana";
+  color: #C78B00;
+}
 
+.faqh1 {
+  text-align: center;
+  font-family:"Brush Script MT";
+  font-size: 5.2rem;
+  color: #C78B00;
+  margin-top:4.5%;
+}
+.faqh3andh4part1 h3 {
+  color: #C78B00;
+  text-align: center;
+}
+
+.faqh3andh4part1 h4 {
+  color: #C78B00;
+  text-align: center;
+}
+.faqlist {
+  color: #C78B00;
+  text-align: center;
+}
+.faqh3andh4part2 h3 {
+  color: #C78B00;
+  text-align: center;
+}
+.faqh3andh4part2 h4 {
+  color: #C78B00;
+  text-align: center;
+}
+
+.secondh1 {
+  color: #C78B00;
+  text-align: center;
+  margin-top: 50px;
+}
+
+.footer {
+  margin-top: 100px;
+  margin-left: 600px;
+  color: #C78B00;
+}
