--- a/finalprojectpage1.css
+++ b/finalprojectpage1.css
@@ -1,4 +1,3 @@
-
 .navigation {
   position: fixed;
   top: 0;
@@ -74,9 +73,10 @@
   margin-right: 700px;
 }
 
-.flexbutton button {
+.flexbutton button:hover {
   background-color: black;
   border-radius: 10px;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.6);
 }
 
 .imgflex {
@@ -99,9 +99,10 @@
 .glowbutton {
   margin-right: 700px;
 }
-.glowbutton button {
+.glowbutton button:hover {
   background-color: black;
   border-radius: 10px;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.6);
 }
 
 .imgglow {
@@ -125,9 +126,10 @@
   margin-right: 700px;
 }
 
-.redbutton button {
+.redbutton button:hover {
   background-color: black;
   border-radius: 10px;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.6);
 }
 
 .imgred {
@@ -143,4 +145,5 @@
   margin-top: 100px;
   color: #C78B00;
 }
+ 
  
