--- a/finalprojectpage1.css
+++ b/finalprojectpage1.css
@@ -1,3 +1,4 @@
+
 .navigation {
   position: fixed;
   top: 20px;
@@ -152,6 +153,5 @@
 
 .footer {
   margin-top: 100px;
-  color: #C78B00;
+  color: black;
 }
- 
