--- a/finalprojectpage3.css
+++ b/finalprojectpage3.css
@@ -1,13 +1,17 @@
 .navigation {
   position: fixed;
-  top: 0;
-  right: 0;
+  top: 20px;
+  right: 200px;
   length: 100px;
   font-family:"Verdana";
   color: #C78B00;
 }
-
-.faqh1 {
+.navigation a {
+  font-family:"Verdana";
+  color: #C78B00;
+  text-decoration: underline;
+}
+.faqh1  h1 {
   text-align: center;
   font-family:"Brush Script MT";
   font-size: 5.2rem;
@@ -45,5 +49,5 @@
 .footer {
   margin-top: 100px;
   margin-left: 600px;
-  color: #C78B00;
+  color: black;
 }
