--- a/finalprojectpage1.css
+++ b/finalprojectpage1.css
@@ -5,24 +5,24 @@
   right: 200px;
   length: 100px;
   font-family:"Verdana";
-  color: #C78B00;
+  color: #8F6A2F;
 }
 .navigation a {
   font-family:"Verdana";
-  color: #C78B00;
+  color: #8F6A2F;
   text-decoration: underline;
 }
 .aboutush1 h1 {
   text-align: center;
   font-family:"Brush Script MT";
   font-size: 5.2rem;
-  color: #C78B00;
+  color: #8F6A2F;
   margin-top:4.5%;
 }
 .aboutush3 {
   font-family:"Verdana";
   text-align: center;
-  color: #C78B00;
+  color: #8F6A2F;
   margin-top: 0.05%;
   margin-left: 15%;
   margin-right:15%;
