--- a/finalprojectpage2.css
+++ b/finalprojectpage2.css
@@ -4,25 +4,25 @@
   right: 200px;
   length: 100px;
   font-family:"Verdana";
-  color: #C78B00;
+  color: #8F6A2F;
 }
 .navigation a {
   font-family:"Verdana";
-  color: #C78B00;
+  color: #8F6A2F;
   text-decoration: underline;
 }
 .photopackagesh1 h1 {
   text-align: center;
   font-family:"Brush Script MT";
   font-size: 5.2rem;
-  color: #C78B00;
+  color: #8F6A2F;
   margin-top: 4.5%;
 }
 
 .essential {
   font-family:"Verdana";
   text-align: center;
-  color: #C78B00;
+  color: #8F6A2F;
   margin-top: 0.05%;
   margin-right:15%;
 }
@@ -52,7 +52,7 @@
 .premium {
   font-family:"Verdana";
   text-align: center;
-  color: #C78B00;
+  color: #8F6A2F;
   margin-top: 0.05%;
   margin-right:15%;
 }
@@ -84,7 +84,7 @@
 .luxe {
    font-family:"Verdana";
   text-align: center;
-  color: #C78B00;
+  color: #8F6A2F;
   margin-top: 0.05%;
   margin-right:15%;
 }
@@ -112,7 +112,7 @@
   text-align: center;
   font-family:"Verdana";
   font-size: 5.2rem;
-  color: #C78B00;
+  color: #8F6A2F;
   margin-top:4.5%;
 }
 .footer {
