--- a/finalprojectpage3.css
+++ b/finalprojectpage3.css
@@ -4,44 +4,44 @@
   right: 200px;
   length: 100px;
   font-family:"Verdana";
-  color: #C78B00;
+  color: #8F6A2F;
 }
 .navigation a {
   font-family:"Verdana";
-  color: #C78B00;
+  color: #8F6A2F;
   text-decoration: underline;
 }
 .faqh1  h1 {
   text-align: center;
   font-family:"Brush Script MT";
   font-size: 5.2rem;
-  color: #C78B00;
+  color: #8F6A2F;
   margin-top:4.5%;
 }
 .faqh3andh4part1 h3 {
-  color: #C78B00;
+  color: #8F6A2F;
   text-align: center;
 }
 
 .faqh3andh4part1 h4 {
-  color: #C78B00;
+  color: #8F6A2F;
   text-align: center;
 }
 .faqlist {
-  color: #C78B00;
+  color: #8F6A2F;
   text-align: center;
 }
 .faqh3andh4part2 h3 {
-  color: #C78B00;
+  color: #8F6A2F;
   text-align: center;
 }
 .faqh3andh4part2 h4 {
-  color: #C78B00;
+  color: #8F6A2F;
   text-align: center;
 }
 
 .secondh1 {
-  color: #C78B00;
+  color: #8F6A2F;
   text-align: center;
   margin-top: 50px;
 }
