--- a/finalprojectpage1.css
+++ b/finalprojectpage1.css
@@ -75,6 +75,7 @@
 
 .studioflexinfo {
   margin-right: 700px;
+  color: black;
 }
 
 .flexbutton {
@@ -102,6 +103,7 @@
 
 .studioglowinfo {
   margin-right: 700px;
+  color: black;
 }
 
 .glowbutton {
@@ -130,6 +132,7 @@
 
 .studioredinfo {
   margin-right: 700px;
+  color: black;
 }
 
 .redbutton {
